--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ body{
 .colors > li.blue{
   background: blue;
 }
-.colors > li.yellow{
-  background: yellow;
+.colors > li.black{
+  background: black;
 }
 .colors > li.active{
   box-shadow: 0 0 3px rgba(0,0,0,0.95);
