--- a/style.css
+++ b/style.css
@@ -85,3 +85,7 @@ body{
 .sizes>li,.colors>li,.actions>svg:hover{
   cursor: pointer;
 }
+.sizes > li.active{
+  box-shadow: 0 0 3px rgba(0,0,0,0.95);
+  transform: scale(1.2);
+}
